@@ -26,6 +26,8 @@ PHP                                                                        NEWS
 - Fixed many bugs in OCI8. (Tony)
 - Fixed crash and leak in mysqli when using 4.1.x client libraries and
   connecting to 5.x server. (Andrey)
+- Fixed bug #35713 (getopt() returns array with numeric strings when passed 
+  options like '-1'). (Tony)
 - Fixed bug #35694 (Improved error message for invalid fetch mode). (Ilia)
 - Fixed bug #35692 (iconv_mime_decode() segmentation fault; with libiconv 
   only). (Tony)
